--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -2,6 +2,7 @@ footer {
     background-color: $background-color-darker;
     color: white;
     padding: 25px;
+    margin: 0;
         & h2 {
             font-family: 'Shrikhand', cursive;
             font-size: 2em;
@@ -13,6 +14,9 @@ footer {
         }
         & li {
             padding: 13px 0 0 0;
+        }
+        & a:hover {
+            font-weight: bold;
         }
 }
 
