--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,31 +1,38 @@
 header {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
+    @include flexRow;
     margin: 0;
+    z-index: 0;
         & p {
             font-size: 1em;
             color: black;
+        }
+        & .fa-arrow-left {
+            position: relative;
+            left: -60px;
         }
 }
 
 .nom {
     @include flexMid;
     height: 63px;
+    width: 100%;
     margin: 0;
-    z-index: 2;
-    box-shadow: 0px 3px 3px #ccc;
+    z-index: 0;
+    @include boxShadow;
+}
+
+.nom_menu {
+    @include flexRow;
+    height: 63px;
+    padding: 0;
+    margin: 0;
 }
 
 .location {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
+    @include flexRow;
     width: 100%;
     height: 50px;
     background-color: $background-color-medium;
-    z-index: 1;
 }
 
 .fa-map-marker-alt {
@@ -36,6 +43,7 @@ header {
 .reserver_menu {
     @include flexMid;
     min-height: 285px;
+    width: 100%;
     background-color: $background-color-light;
     padding: 20px;
     box-sizing: border-box;    
@@ -63,3 +71,6 @@ header {
         }
 }
 
+.fonctionnement {
+    background-color: white;
+}
