--- a/css/_loader.scss
+++ b/css/_loader.scss
@@ -1,14 +1,49 @@
-
 .loader {
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 3s linear infinite;
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
+  visibility: hidden;
+  position: fixed;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: $primary-color;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+    & .fas {
+      z-index: 5;
+      font-size: 3em;
+    }
+}
+
+.loader__rotative {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  border: 10px solid transparent;
+  border-top: 10px solid $secondary-color;
+  border-bottom: 10px solid $secondary-color;
+  z-index: 3;
+  animation: spin 3s 1;
+}
+
+.loader__color {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  border: 10px solid transparent;
+  border-left: 10px solid $tertiary-color;
+  border-right: 10px solid $tertiary-color;
+  z-index: 3;
+  animation: spinner 3s 1;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg);}
+  100% { transform: rotate(360deg);}
+}
+
+@keyframes spinner {
+  0% { transform: rotate(360deg);}
+  100% { transform: rotate(0deg);}
+}
