--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,7 @@ header .fa-arrow-left:hover {
 }
 
 .btn:hover {
-  opacity: 90%;
+  opacity: 80%;
   -webkit-box-shadow: 0px 3px 10px #353535;
           box-shadow: 0px 3px 10px #353535;
 }
@@ -335,7 +335,7 @@ header .fa-arrow-left:hover {
 }
 
 .btn__fonctionnement:hover {
-  opacity: 90%;
+  opacity: 80%;
   -webkit-box-shadow: 0px 3px 10px #353535;
           box-shadow: 0px 3px 10px #353535;
 }
@@ -440,7 +440,7 @@ header .fa-arrow-left:hover {
 }
 
 .cartes__restaurants:hover {
-  opacity: 90%;
+  opacity: 80%;
   -webkit-box-shadow: 0px 3px 10px #353535;
           box-shadow: 0px 3px 10px #353535;
 }
@@ -583,25 +583,6 @@ footer a:hover {
   height: 23px;
 }
 
-.menu__entrees {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column wrap;
-          flex-flow: column wrap;
-  grid-gap: 15px;
-}
-
-.menu__entrees h3 {
-  text-transform: uppercase;
-  -webkit-text-decoration: underline 3px #99E2D0;
-          text-decoration: underline 3px #99E2D0;
-  text-underline-offset: 8px;
-  padding: 10px 10px 10px 20px;
-}
-
 .menu__item {
   position: relative;
   background-color: white;
@@ -613,6 +594,12 @@ footer a:hover {
           box-shadow: 0px 3px 10px #ccc;
   -webkit-animation: slide 3s;
           animation: slide 3s;
+}
+
+.menu__item:hover {
+  opacity: 80%;
+  -webkit-box-shadow: 0px 3px 10px #353535;
+          box-shadow: 0px 3px 10px #353535;
 }
 
 .menu__item h4 {
@@ -658,7 +645,7 @@ footer a:hover {
   margin: 0;
 }
 
-.plats {
+.entrees, .plats, .desserts {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -669,31 +656,17 @@ footer a:hover {
   grid-gap: 15px;
 }
 
-.plats h3 {
+.entrees h3, .plats h3, .desserts h3 {
   text-transform: uppercase;
-  -webkit-text-decoration: underline 3px #99E2D0;
-          text-decoration: underline 3px #99E2D0;
-  text-underline-offset: 8px;
   padding: 10px 10px 10px 20px;
 }
 
-.desserts {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column wrap;
-          flex-flow: column wrap;
-  grid-gap: 15px;
-}
-
-.desserts h3 {
-  text-transform: uppercase;
-  -webkit-text-decoration: underline 3px #99E2D0;
-          text-decoration: underline 3px #99E2D0;
-  text-underline-offset: 8px;
-  padding: 10px 10px 10px 20px;
+.entrees h3::after, .plats h3::after, .desserts h3::after {
+  content: "";
+  display: block;
+  width: 48px;
+  padding-top: 5px;
+  border-bottom: 3px solid #99E2D0;
 }
 
 .btn__commander {
