--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -3,6 +3,7 @@ footer {
     color: white;
     padding: 25px;
     margin: 0;
+    z-index: 0;
         & h2 {
             font-family: 'Shrikhand', cursive;
             font-size: 2em;
