--- a/css/_loader.scss
+++ b/css/_loader.scss
@@ -1,19 +1,37 @@
 .loader {
-  visibility: hidden;
   position: fixed;
-  display: flex;
-  flex-flow: column wrap;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+  @include flexMid;
   background-color: $primary-color;
   width: 100%;
   height: 100%;
-  z-index: 3;
-    & .fas {
-      z-index: 5;
+  z-index: -5;
+  opacity: 0;
+  animation: opacity 3s 1;
+    & .fa-utensils {
+      position: relative;
+      opacity: 0.5;
+      top: -260px;
+      left: 10px;
       font-size: 3em;
+      color: white;
+      z-index: 4;
+      animation: color 3s 1;
     }
+}
+
+@keyframes opacity {
+  0% { opacity: 1; z-index: 1;}
+  99% { opacity: 1; z-index: 1;}
+  100% { opacity: 0; z-index: -5;}
+}
+
+@keyframes color {
+  0% { color: $primary-color; }
+  20% { color: $secondary-color; }
+  40% { color: $tertiary-color; }
+  60% { color: $secondary-color; }
+  80% { color: $primary-color; }
+  100% { color: $tertiary-color; }
 }
 
 .loader__rotative {
@@ -27,7 +45,10 @@
   animation: spin 3s 1;
 }
 
-.loader__color {
+.loader__rotative_small {
+  position: relative;
+  top: -160px;
+  left: 0;
   width: 120px;
   height: 120px;
   border-radius: 50%;
@@ -39,8 +60,8 @@
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg);}
-  100% { transform: rotate(360deg);}
+  0% { transform: rotate(0deg); opacity: 1;}
+  100% { transform: rotate(360deg); opacity: 0.5;} 
 }
 
 @keyframes spinner {
