--- a/css/_restaurants.scss
+++ b/css/_restaurants.scss
@@ -14,9 +14,9 @@
     flex-flow: column wrap;
     text-align: left;
     width: 335px;
-    min-height: fit-content;
+    background-color: white;
     border-radius: 20px 20px 20px 20px;
-    box-shadow: 0px 0px 50px #ccc;
+    @include boxShadow;
     box-sizing: border-box;
     z-index: 0;
         & a {
@@ -29,11 +29,11 @@
             object-fit: cover;
         }
         & h3 {
-            padding-left: 14px;
+            padding: 0;
             margin: 0;
         }
         & p {
-            padding-left: 14px;
+            padding: 0;
             margin: 0;
         }
             &:hover {
@@ -41,31 +41,45 @@
             }
 }
 
-.cartes__restaurants:nth-child(1):after, .cartes__restaurants:nth-child(2):after {
-    content: 'Nouveau';
-    display: flex;
-    flex-flow: row wrap;
-    align-content: center;
-    justify-content: center;
-    position: relative;
-    top: -250px;
-    left: 230px;
-    width: 80px;
-    height: 30px;
-    background-color: $tertiary-color;
-    color: #149373;
-    border-radius: 5px;
-    z-index: 1;
-}
-
 .cartes__restaurants__id {
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
     align-content: left;
-    padding: 20px 20px 20px 10px;
-    margin: 0;
-    z-index: 0;
+    max-height: 75px;
+    padding: 0;
+    margin: 20px 0 0 15px;
+     & .far {
+        display: flex;
+        flex-flow: row wrap;
+        position: relative;
+        top: -30px;
+        left: 280px;
+        height: 24px;
+        width: 24px;
+        font-size: 1.5em;
+        color: black;
+     } 
+     
+     & .fas {
+        display: flex;
+        flex-flow: row wrap;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        height: 24px;
+        width: 24px;
+        opacity: 0;
+        background: -webkit-linear-gradient(0deg, rgba(147,86,220,1) 0%, rgba(255,121,218,1) 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        transition: opacity 0.5s;
+            &:hover {
+                opacity: 1;
+            }
+     }
 }
 
 .nouveau {
@@ -74,24 +88,15 @@
     align-content: center;
     justify-content: center;
     position: relative;
-    padding: 0;
-    margin: 0;
-    top: -250px;
-    left: 230px;
+    top: -180px;
+    left: 25px;
     width: 80px;
     height: 30px;
     background-color: $tertiary-color;
     color: #149373;
     border-radius: 5px;
-    z-index: 1;
+    z-index: 5;
 }
 
-.far {
-    display: flex;
-    flex-flow: row wrap;
-    position: relative;
-    top: -30px;
-    left: 280px;
-    width: 16px;
-}
+
 
