--- a/css/_media_queries.scss
+++ b/css/_media_queries.scss
@@ -29,5 +29,16 @@ h1 {
     font-size: 3em;
 }
 
+.menu__container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: left;
+    grid-gap: 30px;
+}
+
+.menu__item {
+    min-width: 400px;
+    max-width: 100%;
+}
 
 }
