--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,6 @@ a:hover {
 }
 
 .loader {
-  position: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -47,6 +46,7 @@ a:hover {
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
+  position: fixed;
   background-color: #9356DC;
   width: 100%;
   height: 100%;
@@ -69,6 +69,7 @@ a:hover {
 }
 
 .loader__rotative {
+  position: relative;
   width: 160px;
   height: 160px;
   border-radius: 50%;
@@ -796,7 +797,7 @@ footer a:hover {
 
 .entrees h3, .plats h3, .desserts h3 {
   text-transform: uppercase;
-  padding: 10px 10px 10px 20px;
+  padding: 20px 10px 0 10px;
 }
 
 .entrees h3::after, .plats h3::after, .desserts h3::after {
@@ -822,7 +823,7 @@ footer a:hover {
       -ms-flex-align: center;
           align-items: center;
   text-align: left;
-  padding: 50px 0 0px 0;
+  padding: 10px 0 0px 0;
 }
 
 .check {
