--- a/css/style.scss
+++ b/css/style.scss
@@ -31,7 +31,7 @@ $icons-color-primary: #7E7E7E;
 
 @mixin menu_h3 {
     text-transform: uppercase;
-    padding: 10px 10px 10px 20px;
+    padding: 20px 10px 0 10px;
 }
 
 
