--- a/css/_loader.scss
+++ b/css/_loader.scss
@@ -1,6 +1,6 @@
 .loader {
-  position: fixed;
   @include flexMid;
+  position: fixed;
   background-color: $primary-color;
   width: 100%;
   height: 100%;
@@ -20,6 +20,7 @@
 }
 
 .loader__rotative {
+  position: relative;
   width: 160px;
   height: 160px;
   border-radius: 50%;
