--- a/css/_restaurants.scss
+++ b/css/_restaurants.scss
@@ -45,7 +45,7 @@
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
-    align-content: left;
+    align-content: flex-start;
     max-height: 75px;
     padding: 0;
     margin: 20px 0 0 15px;
